# typer-test-proj

./: README.md  main.py  pyproject.toml
testcli/: copy_files_from_a_to_b.py  main.py
typer_test_proj/: main.py
