[tool.poetry]
name = "testcli"
version = "0.1.0"
description = "Play with Tyler for cli tool building"
authors = ["Xiangshi Yin <piupiuyin@gmail.com>"]
license = "Apache"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
typer = {extras = ["all"], version = "^0.12.5"}
tqdm = "^4.66.5"
google-cloud-storage = "^2.18.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
testcli = "testcli.main:app"